--- a/src/gui/ChatPanel.ui
+++ b/src/gui/ChatPanel.ui
@@ -27,7 +27,11 @@
     <number>6</number>
    </property>
    <item row="2" column="1">
-    <widget class="QLineEdit" name="chatText"/>
+    <widget class="QLineEdit" name="chatText">
+     <property name="accessibleDescription">
+      <string>Type your text to sent on the chat here</string>
+     </property>
+    </widget>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="iconLabel">
@@ -53,6 +57,9 @@
      <property name="toolTip">
       <string>clear the messages ...</string>
      </property>
+     <property name="accessibleDescription">
+      <string>Press that button to clear your message</string>
+     </property>
      <property name="text">
       <string/>
      </property>
@@ -63,6 +70,9 @@
    </item>
    <item row="0" column="0" colspan="3">
     <widget class="QScrollArea" name="chatScroll">
+     <property name="accessibleDescription">
+      <string>This is the chat scroll area</string>
+     </property>
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
