--- a/src/gui/UserNameDialog.ui
+++ b/src/gui/UserNameDialog.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Login ...</string>
   </property>
+  <property name="accessibleDescription">
+   <string>This is the user name dialog box</string>
+  </property>
   <property name="modal">
    <bool>true</bool>
   </property>
@@ -43,10 +46,17 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QLineEdit" name="lineEdit"/>
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="accessibleDescription">
+      <string>Type your user name here</string>
+     </property>
+    </widget>
    </item>
    <item row="1" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="accessibleDescription">
+      <string>Press this button if you are ok</string>
+     </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
